got the wrong selector on that font size change for main menu on tablets. this is the fix.

--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ img.logo {
 
 @media (min-width: 768px) and (max-width: 991px) {
 	
-	.navbar .nav>li>a {
+	.nav > li > a {
 		font-size: .9em;
 	}
 	
